######################################### communicate ######################################

__top_builddir__lib_libnissa_a_SOURCES+= \
	communicate/all_to_all.cpp \
	communicate/borders.cpp \
	communicate/communicate.cpp \
	communicate/edges.cpp

include_HEADERS+= \
	communicate/all_to_all.hpp \
	communicate/borders.hpp \
	communicate/communicate.hpp \
	communicate/edges.hpp

