################################## free theory##################################

__top_builddir__lib_libnissa_a_SOURCES+= \
	free_theory/cg_eoprec_twisted_free_operator.cpp \
	free_theory/free_theory_types_routines.cpp \
	free_theory/tlSym_gauge_propagator.cpp \
	free_theory/twisted_free_Dirac_eoprec_operator.cpp \
	free_theory/twisted_propagator.cpp

include_HEADERS+= \
	free_theory/cg_eoprec_twisted_free_operator.hpp \
	free_theory/free_theory_types.hpp \
	free_theory/free_theory_types_routines.hpp \
	free_theory/tlSym_gauge_propagator.hpp \
	free_theory/twisted_free_Dirac_eoprec_operator.hpp \
	free_theory/twisted_propagator.hpp
