################################## free theory##################################

# __top_builddir__lib_libnissa_a_SOURCES+= \
# 	%D%/cg_eoprec_twisted_free_operator.cpp \
# 	%D%/free_theory_types_routines.cpp \
# 	%D%/tlSym_gauge_propagator.cpp \
# 	%D%/twisted_free_Dirac_eoprec_operator.cpp \
# 	%D%/twisted_propagator.cpp

# include_HEADERS+= \
# 	%D%/cg_eoprec_twisted_free_operator.hpp \
# 	%D%/free_theory_types.hpp \
# 	%D%/free_theory_types_routines.hpp \
# 	%D%/tlSym_gauge_propagator.hpp \
# 	%D%/twisted_free_Dirac_eoprec_operator.hpp \
# 	%D%/twisted_propagator.hpp
