###################################### hmc #########################################

__top_builddir__lib_libnissa_a_SOURCES+= \
	hmc/backfield.cpp \
	hmc/theory_pars.cpp \
	hmc/fermions/rootst_eoimpr_quark_force.cpp \
	hmc/fermions/pseudofermions_generation.cpp \
	hmc/gauge/MFACC_fields.cpp \
	hmc/gauge/gluonic_force.cpp \
	hmc/gauge/pure_gauge_hmc_step.cpp \
	hmc/gauge/pure_gauge_implicit_integrator.cpp \
	hmc/gauge/pure_gauge_Omelyan_integrator.cpp \
	hmc/gauge/Symanzik_force.cpp \
	hmc/gauge/Symanzik_action.cpp \
	hmc/gauge/topological_action.cpp \
	hmc/gauge/topological_force.cpp \
	hmc/gauge/Wilson_action.cpp \
	hmc/gauge/Wilson_force.cpp \
	hmc/momenta/momenta_action.cpp \
	hmc/momenta/momenta_evolve.cpp \
	hmc/momenta/momenta_generation.cpp \
	hmc/multipseudo/multipseudo_rhmc_step.cpp \
	hmc/multipseudo/Omelyan_integrator.cpp \
	hmc/multipseudo/quark_force.cpp \
	hmc/multipseudo/set_expansions.cpp \
	hmc/multipseudo/theory_action.cpp

include_HEADERS+= \
	hmc/backfield.hpp \
	hmc/hmc.hpp \
	hmc/quark_pars.hpp \
	hmc/theory_pars.hpp \
	hmc/fermions/rootst_eoimpr_quark_force.hpp \
	hmc/fermions/pseudofermions_generation.hpp \
	hmc/gauge/MFACC_fields.hpp \
	hmc/gauge/gluonic_action.hpp \
	hmc/gauge/gluonic_force.hpp \
	hmc/gauge/pure_gauge_hmc_step.hpp \
	hmc/gauge/pure_gauge_implicit_integrator.hpp \
	hmc/gauge/pure_gauge_Omelyan_integrator.hpp \
	hmc/gauge/Symanzik_force.hpp \
	hmc/gauge/Symanzik_action.hpp \
	hmc/gauge/topological_action.hpp \
	hmc/gauge/topological_force.hpp \
	hmc/gauge/Wilson_action.hpp \
	hmc/gauge/Wilson_force.hpp \
	hmc/momenta/momenta_action.hpp \
	hmc/momenta/momenta_evolve.hpp \
	hmc/momenta/momenta_generation.hpp \
	hmc/multipseudo/multipseudo_rhmc_step.hpp \
	hmc/multipseudo/Omelyan_integrator.hpp \
	hmc/multipseudo/quark_force.hpp \
	hmc/multipseudo/set_expansions.hpp \
	hmc/multipseudo/theory_action.hpp
