###################################### hmc #########################################

__top_builddir__lib_libnissa_a_SOURCES+= \
	%D%/backfield.cpp \
	%D%/theory_pars.cpp \
	%D%/fermions/rootst_eoimpr_quark_force.cpp \
	%D%/fermions/roottm_clov_eoimpr_quark_force.cpp \
	%D%/fermions/pseudofermions_generation.cpp \
	%D%/gauge/clover_det_action.cpp \
	%D%/gauge/clover_det_force.cpp \
	%D%/gauge/gluonic_force.cpp \
	%D%/gauge/pure_gauge_hmc_step.cpp \
	%D%/gauge/pure_gauge_Omelyan_integrator.cpp \
	%D%/gauge/Symanzik_force.cpp \
	%D%/gauge/Symanzik_action.cpp \
	%D%/gauge/topological_force.cpp \
	%D%/gauge/Wilson_action.cpp \
	%D%/gauge/Wilson_force.cpp \
	%D%/momenta/momenta_action.cpp \
	%D%/momenta/momenta_evolve.cpp \
	%D%/momenta/momenta_generation.cpp \
	%D%/multipseudo/multipseudo_rhmc_step.cpp \
	%D%/multipseudo/Omelyan_integrator.cpp \
	%D%/multipseudo/quark_force.cpp \
	%D%/multipseudo/set_expansions.cpp \
	%D%/multipseudo/theory_action.cpp

include_HEADERS+= \
	%D%/backfield.hpp \
	%D%/hmc.hpp \
	%D%/quark_pars.hpp \
	%D%/theory_pars.hpp \
	%D%/fermions/rootst_eoimpr_quark_force.hpp \
	%D%/fermions/roottm_clov_eoimpr_quark_force.hpp \
	%D%/fermions/pseudofermions_generation.hpp \
	%D%/gauge/clover_det_action.hpp \
	%D%/gauge/clover_det_force.hpp \
	%D%/gauge/gluonic_action.hpp \
	%D%/gauge/gluonic_force.hpp \
	%D%/gauge/pure_gauge_hmc_step.hpp \
	%D%/gauge/pure_gauge_Omelyan_integrator.hpp \
	%D%/gauge/Symanzik_force.hpp \
	%D%/gauge/Symanzik_action.hpp \
	%D%/gauge/topological_action.hpp \
	%D%/gauge/topological_force.hpp \
	%D%/gauge/Wilson_action.hpp \
	%D%/gauge/Wilson_force.hpp \
	%D%/momenta/momenta_action.hpp \
	%D%/momenta/momenta_evolve.hpp \
	%D%/momenta/momenta_generation.hpp \
	%D%/multipseudo/multipseudo_rhmc_step.hpp \
	%D%/multipseudo/Omelyan_integrator.hpp \
	%D%/multipseudo/quark_force.hpp \
	%D%/multipseudo/set_expansions.hpp \
	%D%/multipseudo/theory_action.hpp
