###################################### inverters #################################

__top_builddir__lib_libnissa_a_SOURCES+= \
	%D%/momenta/cg_invert_MFACC.cpp \
	%D%/momenta/cgm_invert_MFACC.cpp \
	%D%/staggered/cgm_invert_stD2ee_m2_portable.cpp \
	%D%/staggered/cgm_32_invert_stD2ee_m2.cpp \
	%D%/staggered/cgm_32_invert_stD2ee_m2_portable.cpp \
	%D%/staggered/cg_invert_stD2ee_m2_portable.cpp \
	%D%/staggered/cgm_invert_stD2ee_m2.cpp \
	%D%/staggered/cg_invert_stD2ee_m2.cpp \
	%D%/staggered/cg_invert_stD.cpp \
	%D%/staggered/cg_invert_evn_stD.cpp \
	%D%/overlap/cgm_invert_overlap_kernel2.cpp \
	%D%/twisted_mass/cg_invert_tmD_eoprec.cpp \
	%D%/twisted_mass/cg_invert_tmQ2.cpp \
	%D%/twisted_mass/cg_64_invert_tmQ2.cpp \
	%D%/twisted_mass/cg_64_invert_tmD_eoprec.cpp \
	%D%/twisted_mass/cgm_invert_tmQ2.cpp \
	%D%/twisted_mass/cg_128_invert_tmQ2.cpp \
	%D%/twisted_mass/cg_128_invert_tmD_eoprec.cpp \
	%D%/twisted_mass/tm_frontends.cpp \
	%D%/twisted_clover/cg_invert_tmclovQ2.cpp \
	%D%/twisted_clover/cg_64_invert_tmclovQ2_portable.cpp \
	%D%/twisted_clover/cg_64_invert_tmclovD_eoprec.cpp \
	%D%/twisted_clover/cg_128_invert_tmclovQ2.cpp \
	%D%/twisted_clover/cg_128_invert_tmclovD_eoprec.cpp \
	%D%/twisted_clover/cgm_invert_tmclovDkern_eoprec_square_portable.cpp \
	%D%/twisted_clover/cgm_invert_tmclovQ2.cpp \
	%D%/twisted_clover/tmclov_frontends.cpp \
	%D%/Wclov/cg_invert_WclovQ.cpp \
	%D%/Wclov/cg_invert_WclovQ2.cpp \
	%D%/twisted_clover/cg_invert_tmclovD_eoprec.cpp \
	%D%/twisted_clover/cg_invert_tmclovQ.cpp

include_HEADERS+= \
	%D%/momenta/cg_invert_MFACC.hpp \
	%D%/momenta/cgm_invert_MFACC.hpp \
	%D%/templates/modern_cg.hpp \
	%D%/twisted_mass/cg_invert_tmD_eoprec.hpp \
	%D%/twisted_mass/cg_invert_tmQ2.hpp \
	%D%/twisted_mass/cg_64_invert_tmQ2.hpp \
	%D%/twisted_mass/cg_64_invert_tmD_eoprec.hpp \
	%D%/twisted_mass/cgm_invert_tmQ2.hpp \
	%D%/twisted_mass/cg_128_invert_tmQ2.hpp \
	%D%/twisted_mass/cg_128_invert_tmD_eoprec.hpp \
	%D%/twisted_mass/tm_frontends.hpp \
	%D%/overlap/cgm_invert_overlap_kernel2.hpp \
	%D%/staggered/cgm_invert_stD2ee_m2.hpp \
	%D%/staggered/cg_invert_stD2ee_m2.hpp \
	%D%/staggered/cg_invert_stD.hpp \
	%D%/staggered/cg_invert_evn_stD.hpp \
	%D%/staggered/cgm_32_invert_stD2ee_m2.hpp \
	%D%/staggered/cgm_invert_stD2ee_m2_portable.hpp \
	%D%/staggered/cgm_32_invert_stD2ee_m2_portable.hpp \
	%D%/staggered/cg_invert_stD2ee_m2_portable.hpp \
	%D%/Wclov/cg_invert_WclovQ.hpp \
	%D%/Wclov/cg_invert_WclovQ2.hpp \
	%D%/twisted_clover/cg_invert_tmclovQ.hpp \
	%D%/twisted_clover/cg_invert_tmclovQ2.hpp \
	%D%/twisted_clover/cg_64_invert_tmclovQ2_portable.hpp \
	%D%/twisted_clover/cg_64_invert_tmclovQ2.hpp \
	%D%/twisted_clover/cg_64_invert_tmclovD_eoprec.hpp \
	%D%/twisted_clover/cg_128_invert_tmclovQ2.hpp \
	%D%/twisted_clover/cg_128_invert_tmclovD_eoprec.hpp \
	%D%/twisted_clover/cgm_invert_tmclovQ2.hpp \
	%D%/twisted_clover/cg_invert_tmclovD_eoprec.hpp \
	%D%/twisted_clover/tmclov_frontends.hpp

EXTRA_DIST+= \
	%D%/twisted_mass/cg_invert_tmQ2_common.cpp \
	%D%/templates/cgm_32_invert_template_threaded.cpp \
	%D%/templates/cg_128_invert_template_threaded.cpp \
	%D%/templates/cgm_invert_template_summsol_threaded.hpp \
	%D%/templates/cg_invert_template_threaded.cpp \
	%D%/templates/bicgstab_invert_template_threaded.cpp \
	%D%/templates/cgm_invert_template_threaded.cpp

