AM_CPPFLAGS=-I$(top_srcdir)/src

noinst_LTLIBRARIES=libio.la
libio_la_SOURCES= \
	ILDG_File.cpp \
	checksum.cpp \
	endianness.cpp \
	input.cpp \
	reader.cpp \
	writer.cpp

ioincludedir=$(includedir)/io
ioinclude_HEADERS= \
	ILDG_File.hpp \
	checksum.hpp \
	endianness.hpp \
	input.hpp \
	reader.hpp \
	writer.hpp
