############################################### io #################################

__top_builddir__lib_libnissa_a_SOURCES+= \
	io/checksum.cpp \
	io/endianness.cpp \
	io/input.cpp \
	io/ILDG_File.cpp \
	io/reader.cpp \
	io/writer.cpp

include_HEADERS+= \
	io/buffer.hpp \
	io/checksum.hpp \
	io/endianness.hpp \
	io/input.hpp \
	io/ILDG_File.hpp \
	io/reader.hpp \
	io/writer.hpp
