############################################### io #################################

__top_builddir__lib_libnissa_a_SOURCES+= \
	%D%/checksum.cpp \
	%D%/endianness.cpp \
	%D%/input.cpp \
	%D%/ILDG_File.cpp

include_HEADERS+= \
	%D%/buffer.hpp \
	%D%/checksum.hpp \
	%D%/endianness.hpp \
	%D%/input.hpp \
	%D%/ILDG_File.hpp \
	%D%/reader.hpp \
	%D%/writer.hpp
